reject JNI embrace Panama | part 1 nuking literally all of jni-rs
Signed-off-by: Arc-blroth <45273859+Arc-blroth@users.noreply.github.com>